# Elecronic_shop

./: README.md  main.py  pyproject.toml
.pytest_cache/: .gitignore
tests/: test_product.py
