[tool.poetry]
name = "electronic-shop"
version = "0.1.0"
description = ""
authors = ["RitaKrupskaya <ritakrupskaya@bk.ru>"]
readme = "README.md"
packages = [{include = "electronic_shop"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
